2012-10-01  Yuta Kitamura  <yutak@chromium.org>

        Unreviewed. Create WebSocket watch list, and add myself to that list.

        * Scripts/webkitpy/common/config/watchlist:

2012-09-30  Taiju Tsuiki  <tzik@chromium.org>

        Unreviewed. Adding myself as a committer.

        * Scripts/webkitpy/common/config/committers.py:

2012-09-30  Sadrul Habib Chowdhury  <sadrul@chromium.org>

        [chromium] Add a test to verify that a plugin does not receive touch-events unless it explicitly requests for them
        https://bugs.webkit.org/show_bug.cgi?id=97975

        Reviewed by Adam Barth.

        TestWebPlugin can now be configured to accept touch events or not. Use this
        configurability to verify that a plugin does not receive touch events unless
        it explicitly requests for them.

        * DumpRenderTree/chromium/TestWebPlugin.cpp:
        (TestWebPlugin::TestWebPlugin):
        (TestWebPlugin::initialize):
        (TestWebPlugin::parseBoolean):
        * DumpRenderTree/chromium/TestWebPlugin.h:
        (TestWebPlugin):

2012-09-28  Mariusz Grzegorczyk  <mariusz.g@samsung.com>

        [WK2][GTK][EFL] Share WebKit2-GTK plugin process implementation with EFL port
        https://bugs.webkit.org/show_bug.cgi?id=91844

        Reviewed by Simon Hausmann.

        Turn on Netscape Plugin API option by default.

        * Scripts/webkitperl/FeatureList.pm:

2012-09-28  Dirk Pranke  <dpranke@chromium.org>

        webkit-patch rebaseline-expectations is broken
        https://bugs.webkit.org/show_bug.cgi?id=97619

        Reviewed by Ojan Vafai.

        The new expectations format is causing two problems for
        webkit-patch rebaseline expectations

        1) the transformation into and out of the old syntax (which is
        still used internally) is somewhat lossy, e.g., we're not
        preserving the case of Bug(x) identifiers. Also, we can't
        tell if the input was [ WontFix ] or [ Skip WontFix Pass ]